--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -4,7 +4,7 @@
 # doesn't seem to work:
 # github: lukesampson
 patreon: #
-open_collective: #
+open_collective: ScoopInstaller
 ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
